# liboqs

./: .gitignore  CMakeLists.txt  oqsconfig.h.cmake
VisualStudio/: winconfig.h
VisualStudio/oqs/: dll.def  oqs.vcxproj  oqs.vcxproj.filters
config/: alg-support.cmake  features.m4
scripts/copy_from_pqclean/: copy_from_pqclean.yml
src/: CMakeLists.txt
src/crypto/: CMakeLists.txt
src/crypto/sha3/keccak4x/: KeccakP-1600-times4-SIMD256.c  KeccakP-1600-times4-SnP.h
src/kem/: kem.c  kem.h
src/kem/extrahope/: CMakeLists.txt  kem_extrahope.h  kem_extrahope512.c
src/kem/extrahope/src/: api.h  correct_test.c  cpapke.c  cpapke.h  kem.c  ntt.c  ntt.h  params.h  poly.c  poly.h  reduce.c  reduce.h
src/kem/kyber/: CMakeLists.txt  Makefile.am  kem_kyber.h  kem_kyber_1024_90s.c  kem_kyber_512_90s.c  kem_kyber_768_90s.c
src/kem/sike/: CMakeLists.txt  Makefile.am
src/sig/: sig.h
src/sig/dilithium/: CMakeLists.txt  sig_dilithium_2.c  sig_dilithium_3.c  sig_dilithium_4.c
tests/: kat_kem.c
